--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "author": {
     "name": "Eman Herawy"
   },
-  "engines": {
-    "node": "13.6.0",
+ "engines": { "node": "20.x" ,
     "npm": "6.13.4"
   },
   "repository": {
