--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
   
-  "react-scripts": "5.0.1" 
-}
+  "react-scripts": "5.0.1" ,
     "3box": "^1.20.3",
     "@fortawesome/fontawesome-svg-core": "1.2.27",
     "@fortawesome/free-brands-svg-icons": "5.12.1",
