--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-
   "name": "Web3Drive",
   "version": "1.0.0",
   "title": "Your Free Cloud",
-  "description": "",
+  "description": "A decentralized cloud storage platform.",
   "author": {
     "name": "Eman Herawy"
   },
- "engines": { "node": "20.x" ,
-    "npm": "10.8.2"  
+  "engines": { 
+    "node": "20.x",
+    "npm": "10.x"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/EmanHerawy/Web3Drive"
   },
   "dependencies": {
-  
-  "react-scripts": "5.0.1" ,
     "3box": "^1.20.3",
     "@fortawesome/fontawesome-svg-core": "1.2.27",
     "@fortawesome/free-brands-svg-icons": "5.12.1",
@@ -33,11 +31,8 @@
     "framer-motion": "1.8.4",
     "google-map-react": "1.1.6",
     "hamburgers": "1.1.3",
-    "i": "^0.3.6",
     "ipfs": "^0.48.1",
     "leaflet": "1.6.0",
-    "npm": "^6.14.7",
-    "pe7-icon": "1.0.4",
     "react": "16.12.0",
     "react-apexcharts": "1.3.6",
     "react-dom": "16.12.0",
@@ -49,7 +44,7 @@
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "5.0.1",
     "reactjs-file-uploader": "^1.0.8",
     "redux": "4.0.5",
     "rxjs": "^6.6.0",
@@ -63,7 +58,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "format": "./node_modules/.bin/eslint --fix --ignore-path .gitignore ."
+    "format": "eslint --fix --ignore-path .gitignore ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -86,10 +81,7 @@
     "eslint-plugin-react": "7.18.3",
     "eslint-plugin-unused-imports": "0.1.2",
     "gh-pages": "^3.1.0",
-    "node-sass": "4.13.1",
-    "prettier": "1.19.1",
-    "prettier-eslint": "9.0.1",
-    "prettier-eslint-cli": "5.0.0",
-    "sass-vars-to-js-loader": "2.1.1"
+    "sass-vars-to-js-loader": "2.1.1",
+    "prettier": "1.19.1"
   }
 }
